dremio legacy jdbc driver testing